# reseptor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
prompts/: systemprompt.md
prompts/restrictions/: gluten_free.md  none.md  vegan.md  vegetarian.md
recipes/: ultra_adventurous_pizza.md  ultra_adventurous_vegetarian_pizza.md
